# contextual-rag-chatbot

./: .gitignore  LICENSE  README.md  SETUP_GUIDE.md  env.example  main.py  pyproject.toml  readme.MD  setup_phoenix_otel.py  simple_start.py  start_all_services.py  start_clean.py  start_fresh.py  start_phoenix.py  start_phoenix_server.py  start_phoenix_simple.py  start_rag.py  start_rag_system.py
scripts/: cleanup_phoenix.py  init_database.py  init_pgvector.sql  process_documents.py
src/: __init__.py
src/agents/: __init__.py  crew_agents.py
src/config/: __init__.py  settings.py
src/document_processing/: __init__.py  processor.py
src/evaluation/: __init__.py  phoenix_evaluator.py  ragas_evaluator.py
src/rag_pipeline/: __init__.py  llamaindex_rag_engine.py  vector_store.py
src/web_interface/: __init__.py  api.py  open_webui_connector.py
